# iv4xr-se-plugin

./: .gitignore  Ivxr.SePlugin.csproj  IvxrPlugin.cs  IvxrSession.cs  Jenkinsfile  PluginMain.cs  PluginServer.cs  README.md  build.gradle  copy-latest-libraries.bat  copy-latest-libraries.ps1  index.html  ivxr-se-plugin.csproj  navigation.html  pom.xml  public-snapshot.ps1  publish-snapshot.bat  publish-snapshot.ps1  saves-cleanup.bat  saves-cleanup.ps1  se-dist.bat  settings.gradle
BinaryDependencies/: copydeps.bat
CucumberTester/: .gitignore  build.gradle  gradle.properties  settings.gradle
Docs/: how-to-build.md  manual-installation.md  (+4 more)
PythonClient/: .gitignore  README.md  behave.ini  mypy.ini  pylintrc  pyproject.toml  requirements.txt
PythonClient/examples/: exit_to_main_menu.py  load_game.py  maze.py  move_forward.py  png.py  record_input.py  replay_input.py  text.py
PythonClient/features/: environment.py
PythonClient/features/steps/: character_asserts.py  setup_steps.py
PythonClient/scenarios/character-movement/: -0.vx2  Alien-1210095438d30.vx2  SANDBOX_0_0_0_.sbs  SANDBOX_0_0_0_.sbsB5  Sandbox.sbc  Sandbox_config.sbc
PythonClient/spaceengineers/: api.py  communication.py  models.py  proxy.py
PythonClient/src/examples/: exit_to_main_menu.py  load_game.py  maze.py  move_forward.py  observe.py  png.py  record_input.py  replay_input.py  text.py
PythonClient/src/features/: environment.py
PythonClient/src/features/steps/: character_asserts.py  setup_steps.py
PythonClient/src/spaceengineers/: api.py  communication.py  models.py  proxy.py
(+9103 files in other folders)
